--- a/src/components/css/Homepage.css
+++ b/src/components/css/Homepage.css
@@ -145,7 +145,7 @@ best service
   margin: auto;
   margin-top: 3rem;
   border: 2px solid brown;
-  grid-template-columns: repeat(auto-fill,minmax(350px,1fr));
+  grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
 
 }
 
@@ -161,7 +161,7 @@ best service
 
 
 .best-service-info-box-container{
-  width: 100%;
+  width: 350px;
   margin: 2rem auto;
   display: grid;
   height: 370px;
