--- a/src/components/css/Homepage.css
+++ b/src/components/css/Homepage.css
@@ -97,7 +97,7 @@ best service
 ============
 */
 .best-service-container{
-  width: 95%;
+  width: 100%;
   height: auto;
   margin: 5rem auto;
   border: 2px solid green;
@@ -106,6 +106,7 @@ best service
 .best-service-head-text{
   max-width: 350px;
   text-align: left;
+  margin-left: 1rem;
 }
 
 .best-service-head-text h1{
@@ -138,14 +139,17 @@ best service
   border-radius: 3px;
   background: var(--secondary-clr-1);
 }
+
+
+
 .best-service-info-container{
-  width: 95%;
+  width: 90%;
   text-align: center;
   display: grid;
   margin: auto;
   margin-top: 3rem;
   border: 2px solid brown;
-  grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+  grid-template-columns: repeat(auto-fill,minmax(350px,1fr));
 
 }
 
@@ -159,33 +163,23 @@ best service
   }
 }
 
-
-.best-service-info-box-container{
-  width: 90%;
-  max-width: 300px;
-  margin: 2rem auto;
-  display: grid;
-  height: 370px;
-  background: rgb(255, 254, 254);
-  box-shadow: inset 2px 2px 3px rgb(233, 233, 233),inset -2px -2px 3px rgb(233, 233, 233);
-}
-
 .box-container{
-  position: relative;
+  /* position: relative; */
   width: 90%;
   margin: 7px auto;
-  height: auto;
+  height: 350px;
   border: 2px solid green;
+  font-family: var(--secondary-ff);
 }
 
-.best-service-info-box{
+
+
+
+/* .best-service-info-box{
   width: 100%;
   height: 100%;
   position: absolute;
-}
-.best-service-info-box h2{
-  font-family: var(--secondary-ff);
-}
+} */
 
 .best-service-icon{
   display: block;
