--- a/src/components/css/Homepage.css
+++ b/src/components/css/Homepage.css
@@ -146,7 +146,7 @@ best service
   width: 100%;
   text-align: center;
   display: grid;
-  margin: auto;
+  /* margin: auto; */
   margin-top: 3rem;
   border: 2px solid brown;
   grid-template-columns: repeat(auto-fill,minmax(350px,1fr));
