--- a/src/components/css/Homepage.css
+++ b/src/components/css/Homepage.css
@@ -169,14 +169,6 @@ best service
 }
 
 
-
-
-/* .best-service-info-box{
-  width: 100%;
-  height: 100%;
-  position: absolute;
-} */
-
 .best-service-icon{
   display: block;
   font-size: 3.5rem;
@@ -209,7 +201,7 @@ best service image
 
 .best-service-image-container-1{
   background: var(--secondary-clr);
-  width: 95%;
+  width: 90%;
   height: auto;
   margin: 2rem auto;
   display: grid;
@@ -223,7 +215,7 @@ best service image
   display: block;
   object-fit: cover;
   width: 100%;
-  max-width: 350px;
+  /* max-width: 350px; */
   height: 400px;
 }
 
