--- a/src/components/css/Homepage.css
+++ b/src/components/css/Homepage.css
@@ -316,7 +316,7 @@ case
   width: 100%;
   max-width:100%;
   height:auto;
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
 }
 
 .case-head{
@@ -342,7 +342,7 @@ case
 }
  .case-container h1{
    font-family: var(--primary-ff);
-   font-size: 2.3rem;
+   font-size: 2rem;
    text-align: left;
    margin-bottom: 2rem;
    margin-left: 2rem;
@@ -351,7 +351,7 @@ case
 
  .case-cover-container{
    display: grid;
-   width: 90%;
+   width: 100%;
    gap: 2rem;
    /* border: 2px solid; */
    grid-template-columns: repeat(auto-fill,minmax(350px,1fr));
