--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   max-width: 100vw;
   overflow-x: hidden;
-  border: 2px solid yellow;
+  /* border: 2px solid yellow; */
 }
 
 
