--- a/src/components/css/Services.css
+++ b/src/components/css/Services.css
@@ -1,3 +1,7 @@
+.services-container{
+  width: 100%;
+  border: 2px solid blue;
+}
 
 .services-hero{
   background: linear-gradient(rgba(22,22,44,0.5),rgba(30,30,30,0.5)), url('https://images.unsplash.com/photo-1557425493-6f90ae4659fc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80') center/cover no-repeat;
@@ -14,7 +18,8 @@
 }
 
 .best-services-container{
-  margin: 5rem 2rem;
+  width: 100%;
+  margin: 5rem auto;
   text-align: left;
   min-height: 80vh ;
 }
@@ -22,10 +27,12 @@
 .best-services-container h1{
   font-size: 3rem;
   font-family: var(--secondary-ff);
+  margin-left: 1rem;
 }
 
 .best-services-head{
   max-width: 300px;
+  margin-left: 1rem;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -45,10 +52,12 @@
 
 .best-services-list-container{
   width: 100%;
+  /* margin: auto; */
   display: grid;
   place-items: center;
   grid-template-columns: repeat(auto-fill,minmax(350px,1fr));
   margin-top: 3rem;
+  border: 2px solid red;
 }
 
 .best-services-box-container{
