--- a/src/components/css/Contact.css
+++ b/src/components/css/Contact.css
@@ -1,3 +1,7 @@
+.contact-container{
+  width: 100%;
+  border: 2px solid goldenrod;
+}
 .contact-hero{
   background:linear-gradient(rgba(0, 0, 0, 0.822),rgba(0, 0, 0, 0.801)), url('https://images.unsplash.com/photo-1517292987719-0369a794ec0f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1567&q=80') center/cover no-repeat;
   width: 100%;
@@ -35,12 +39,13 @@ grid-template-columns: repeat(auto-fill,minmax(350px,1fr));
 
 form{
   min-height: auto;
-  /* border: 3px solid red; */
+  border: 3px solid red;
 
 }
 
 .form-group{
-  max-width: 400px;
+  width: 100%;
+  /* max-width: 400px; */
   margin:2rem auto;
 }
 
