--- a/src/components/css/Contact.css
+++ b/src/components/css/Contact.css
@@ -1,6 +1,6 @@
 .contact-container{
   width: 100%;
-  border: 2px solid goldenrod;
+  /* border: 2px solid goldenrod; */
 }
 .contact-hero{
   background:linear-gradient(rgba(0, 0, 0, 0.822),rgba(0, 0, 0, 0.801)), url('https://images.unsplash.com/photo-1517292987719-0369a794ec0f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1567&q=80') center/cover no-repeat;
@@ -28,7 +28,7 @@
 
 .form-container {
 /* border:  2px solid; */
-width: 80%;
+width: 100%;
 min-height: 500px;
 margin: 3rem auto;
 /* border: 3px solid yellow; */
@@ -37,9 +37,15 @@ gap: 2rem;
 grid-template-columns: repeat(auto-fill,minmax(350px,1fr));
 }
 
+@media (min-width:786px){
+  .form-container{
+    width: 80%;
+  }
+}
+
 form{
   min-height: auto;
-  border: 3px solid red;
+  /* border: 3px solid red; */
 
 }
 
